--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.50.1",
     "audio_x": "^1.0.9",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
