--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.2.0",
     "@tanstack/react-query": "^5.50.1",
     "audio_x": "^1.0.9",
     "class-variance-authority": "^0.7.0",
