--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.0",
     "@tanstack/react-query": "^5.51.11",
-    "audio_x": "^1.0.9",
+    "audio_x": "^1.0.10-beta.6",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.414.0",
@@ -23,7 +23,6 @@
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0",
-    "valtio": "^1.13.2",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
