--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "sunoh",
+  "name": "sunoh_pwa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port=3000",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel deploy --prod"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.0",
-    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query": "^5.51.11",
     "audio_x": "^1.0.9",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
+    "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
