--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.0",
     "@tanstack/react-query": "^5.51.11",
-    "audio_x": "^1.0.10-beta.6",
+    "@tanstack/react-query-devtools": "^5.51.21",
+    "audio_x": "../audio_x/",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.414.0",
