--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.21",
-    "audio_x": "^1.0.10-beta.14",
+    "audio_x": "^1.0.10-beta.15",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
+    "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
