--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.21",
-    "audio_x": "../audio_x/",
+    "audio_x": "^1.0.10-beta.14",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.2.13",
-    "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1",
+    "react-modal-sheet": "^3.1.0",
     "tailwind-merge": "^2.3.0",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "wouter": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
